{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 119,
  "lineage": "e3720bdd-a44b-415a-67c0-437af94a780e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de99658bdb16633e",
            "association_id": "eipassoc-0ede58b0c6cbde66d",
            "domain": "vpc",
            "id": "eipalloc-0de99658bdb16633e",
            "instance": "i-0154cf653b1d66e78",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0bfe3e0c73cc1425b",
            "private_dns": "ip-10-0-101-58.us-east-2.compute.internal",
            "private_ip": "10.0.101.58",
            "public_dns": "ec2-18-190-127-34.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.127.34",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "stage",
              "owners": "HR"
            },
            "tags_all": {
              "environment": "stage",
              "owners": "HR"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.aws_iam_role_policy_attachment.this",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05bfbece1ed5beb54",
            "arn": "arn:aws:ec2:us-east-2:788491249094:instance/i-0154cf653b1d66e78",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0154cf653b1d66e78",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bfe3e0c73cc1425b",
            "private_dns": "ip-10-0-101-58.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.58",
            "public_dns": "ec2-3-144-113-184.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.113.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-019bec2858b85ad87",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063541cab9e7184e9",
            "tags": {
              "Name": "HR-stage-bastionHost",
              "environment": "stage",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stage-bastionHost",
              "environment": "stage",
              "owners": "HR"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "HR-stage-bastionHost"
            },
            "vpc_security_group_ids": [
              "sg-0389827c5c3be2a2a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:security-group/sg-0389827c5c3be2a2a",
            "description": "Security group for SSH ports open (IPv4) egress",
            "egress": [],
            "id": "sg-0389827c5c3be2a2a",
            "ingress": [],
            "name": "HR-stage-public-bastion-sg-20230201032840804200000006",
            "name_prefix": "HR-stage-public-bastion-sg-",
            "owner_id": "788491249094",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HR-stage-public-bastion-sg",
              "environment": "stage",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stage-public-bastion-sg",
              "environment": "stage",
              "owners": "HR"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-089c5fc402803569b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-146678343",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0389827c5c3be2a2a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-873042236",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0389827c5c3be2a2a",
            "security_group_rule_id": "sgr-0c5470bb938dfb475",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07afe2540aa070d18",
            "domain": "vpc",
            "id": "eipalloc-07afe2540aa070d18",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-14-218-4.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.218.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tenon-vpc-us-east-2a",
              "environment": "dev",
              "owner": "tenongene"
            },
            "tags_all": {
              "Name": "tenon-vpc-us-east-2a",
              "environment": "dev",
              "owner": "tenongene"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d711b37e33b9645",
            "domain": "vpc",
            "id": "eipalloc-01d711b37e33b9645",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-21-85-155.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.85.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tenon-vpc-us-east-2b",
              "environment": "dev",
              "owner": "tenongene"
            },
            "tags_all": {
              "Name": "tenon-vpc-us-east-2b",
              "environment": "dev",
              "owner": "tenongene"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:internet-gateway/igw-011092b2a39b47a98",
            "id": "igw-011092b2a39b47a98",
            "owner_id": "788491249094",
            "tags": {
              "Name": "tenon-vpc",
              "environment": "dev",
              "owner": "tenongene"
            },
            "tags_all": {
              "Name": "tenon-vpc",
              "environment": "dev",
              "owner": "tenongene"
            },
            "vpc_id": "vpc-089c5fc402803569b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07afe2540aa070d18",
            "connectivity_type": "public",
            "id": "nat-0e9962c1641ecb85f",
            "network_interface_id": "eni-03ec61ceb23deeeea",
            "private_ip": "10.0.101.21",
            "public_ip": "3.14.218.4",
            "subnet_id": "subnet-063541cab9e7184e9",
            "tags": {
              "Name": "tenon-vpc-us-east-2a",
              "environment": "dev",
              "owner": "tenongene"
            },
            "tags_all": {
              "Name": "tenon-vpc-us-east-2a",
              "environment": "dev",
              "owner": "tenongene"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d711b37e33b9645",
            "connectivity_type": "public",
            "id": "nat-03e662d8719577316",
            "network_interface_id": "eni-041471cc0e09b40d8",
            "private_ip": "10.0.102.229",
            "public_ip": "3.21.85.155",
            "subnet_id": "subnet-0c1cd255ccf8c69d1",
            "tags": {
              "Name": "tenon-vpc-us-east-2b",
              "environment": "dev",
              "owner": "tenongene"
            },
            "tags_all": {
              "Name": "tenon-vpc-us-east-2b",
              "environment": "dev",
              "owner": "tenongene"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-040f8eabfd02e9f9b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e9962c1641ecb85f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-040f8eabfd02e9f9b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d24d7c45bb27349c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03e662d8719577316",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d24d7c45bb27349c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-011092b2a39b47a98",
            "id": "r-rtb-035c8e9c62cae8ebe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035c8e9c62cae8ebe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:route-table/rtb-0f87f247e11689ed0",
            "id": "rtb-0f87f247e11689ed0",
            "owner_id": "788491249094",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tenon-vpc-db-us-east-2a",
              "environment": "dev",
              "owner": "tenongene"
            },
            "tags_all": {
              "Name": "tenon-vpc-db-us-east-2a",
              "environment": "dev",
              "owner": "tenongene"
            },
            "timeouts": null,
            "vpc_id": "vpc-089c5fc402803569b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:route-table/rtb-0a343344735bd21c3",
            "id": "rtb-0a343344735bd21c3",
            "owner_id": "788491249094",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tenon-vpc-db-us-east-2b",
              "environment": "dev",
              "owner": "tenongene"
            },
            "tags_all": {
              "Name": "tenon-vpc-db-us-east-2b",
              "environment": "dev",
              "owner": "tenongene"
            },
            "timeouts": null,
            "vpc_id": "vpc-089c5fc402803569b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:route-table/rtb-040f8eabfd02e9f9b",
            "id": "rtb-040f8eabfd02e9f9b",
            "owner_id": "788491249094",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tenon-vpc-private-us-east-2a",
              "environment": "dev",
              "owner": "tenongene"
            },
            "tags_all": {
              "Name": "tenon-vpc-private-us-east-2a",
              "environment": "dev",
              "owner": "tenongene"
            },
            "timeouts": null,
            "vpc_id": "vpc-089c5fc402803569b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:route-table/rtb-0d24d7c45bb27349c",
            "id": "rtb-0d24d7c45bb27349c",
            "owner_id": "788491249094",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tenon-vpc-private-us-east-2b",
              "environment": "dev",
              "owner": "tenongene"
            },
            "tags_all": {
              "Name": "tenon-vpc-private-us-east-2b",
              "environment": "dev",
              "owner": "tenongene"
            },
            "timeouts": null,
            "vpc_id": "vpc-089c5fc402803569b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:route-table/rtb-035c8e9c62cae8ebe",
            "id": "rtb-035c8e9c62cae8ebe",
            "owner_id": "788491249094",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tenon-vpc-public",
              "environment": "dev",
              "owner": "tenongene"
            },
            "tags_all": {
              "Name": "tenon-vpc-public",
              "environment": "dev",
              "owner": "tenongene"
            },
            "timeouts": null,
            "vpc_id": "vpc-089c5fc402803569b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f4f153805de009d",
            "route_table_id": "rtb-0f87f247e11689ed0",
            "subnet_id": "subnet-0bc57761675b36268"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ebe450aeff4c6c9",
            "route_table_id": "rtb-0a343344735bd21c3",
            "subnet_id": "subnet-0e1017a875f7b2b7b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048f33c187114406f",
            "route_table_id": "rtb-040f8eabfd02e9f9b",
            "subnet_id": "subnet-095507aa296fe29b9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f6cd720fb843497",
            "route_table_id": "rtb-0d24d7c45bb27349c",
            "subnet_id": "subnet-0e8405b62fbbdb7e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b86deafa71a2902b",
            "route_table_id": "rtb-035c8e9c62cae8ebe",
            "subnet_id": "subnet-063541cab9e7184e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bb509c3f433b8df",
            "route_table_id": "rtb-035c8e9c62cae8ebe",
            "subnet_id": "subnet-0c1cd255ccf8c69d1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:subnet/subnet-0bc57761675b36268",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc57761675b36268",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "788491249094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tenon-vpc-db-us-east-2a",
              "environment": "dev",
              "owner": "tenongene",
              "type": "database-subnets"
            },
            "tags_all": {
              "Name": "tenon-vpc-db-us-east-2a",
              "environment": "dev",
              "owner": "tenongene",
              "type": "database-subnets"
            },
            "vpc_id": "vpc-089c5fc402803569b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:subnet/subnet-0e1017a875f7b2b7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1017a875f7b2b7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "788491249094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tenon-vpc-db-us-east-2b",
              "environment": "dev",
              "owner": "tenongene",
              "type": "database-subnets"
            },
            "tags_all": {
              "Name": "tenon-vpc-db-us-east-2b",
              "environment": "dev",
              "owner": "tenongene",
              "type": "database-subnets"
            },
            "vpc_id": "vpc-089c5fc402803569b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:subnet/subnet-095507aa296fe29b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095507aa296fe29b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "788491249094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tenon-vpc-private-us-east-2a",
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "kubertnetes.io/cluster/HR-stage-tenonk8s": "shared",
              "owner": "tenongene",
              "type": "private-subnets"
            },
            "tags_all": {
              "Name": "tenon-vpc-private-us-east-2a",
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "kubertnetes.io/cluster/HR-stage-tenonk8s": "shared",
              "owner": "tenongene",
              "type": "private-subnets"
            },
            "vpc_id": "vpc-089c5fc402803569b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:subnet/subnet-0e8405b62fbbdb7e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8405b62fbbdb7e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "788491249094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tenon-vpc-private-us-east-2b",
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "kubertnetes.io/cluster/HR-stage-tenonk8s": "shared",
              "owner": "tenongene",
              "type": "private-subnets"
            },
            "tags_all": {
              "Name": "tenon-vpc-private-us-east-2b",
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "kubertnetes.io/cluster/HR-stage-tenonk8s": "shared",
              "owner": "tenongene",
              "type": "private-subnets"
            },
            "vpc_id": "vpc-089c5fc402803569b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:subnet/subnet-063541cab9e7184e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063541cab9e7184e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "788491249094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tenon-vpc-public-us-east-2a",
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "kubertnetes.io/cluster/HR-stage-tenonk8s": "shared",
              "owner": "tenongene",
              "type": "public-subnets"
            },
            "tags_all": {
              "Name": "tenon-vpc-public-us-east-2a",
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "kubertnetes.io/cluster/HR-stage-tenonk8s": "shared",
              "owner": "tenongene",
              "type": "public-subnets"
            },
            "vpc_id": "vpc-089c5fc402803569b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:subnet/subnet-0c1cd255ccf8c69d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1cd255ccf8c69d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "788491249094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tenon-vpc-public-us-east-2b",
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "kubertnetes.io/cluster/HR-stage-tenonk8s": "shared",
              "owner": "tenongene",
              "type": "public-subnets"
            },
            "tags_all": {
              "Name": "tenon-vpc-public-us-east-2b",
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "kubertnetes.io/cluster/HR-stage-tenonk8s": "shared",
              "owner": "tenongene",
              "type": "public-subnets"
            },
            "vpc_id": "vpc-089c5fc402803569b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:788491249094:vpc/vpc-089c5fc402803569b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06543eedc256df10a",
            "default_route_table_id": "rtb-0ba1840ab45e6f31c",
            "default_security_group_id": "sg-0749f5c03d912cc47",
            "dhcp_options_id": "dopt-082ec6733dd64f3d1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-089c5fc402803569b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba1840ab45e6f31c",
            "owner_id": "788491249094",
            "tags": {
              "Name": "tenon-vpc",
              "environment": "dev",
              "name": "vpc-dev",
              "owner": "tenongene"
            },
            "tags_all": {
              "Name": "tenon-vpc",
              "environment": "dev",
              "name": "vpc-dev",
              "owner": "tenongene"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}